SET(MITK_CPACK_PACKAGE_EXECUTABLES "" CACHE INTERNAL "Collecting windows shortcuts to executables" FORCE)
SET(MITK_DIR ${PROJECT_BINARY_DIR})
SET(MITK_EXPORTS_FILE_INCLUDED 1)

IF(MITK_USE_QT AND QT4_FOUND)

  IF(MITK_USE_CTK)
    ADD_SUBDIRECTORY(PluginGenerator)
  ENDIF()
  
  IF(MITK_BUILD_APP_CoreApp OR MITK_BUILD_ALL_APPS)
    ADD_SUBDIRECTORY(CoreApp)
  ENDIF()

  IF(MITK_BUILD_APP_ExtApp OR MITK_BUILD_ALL_APPS)
    ADD_SUBDIRECTORY(ExtApp)
  ENDIF()

  IF(MITK_BUILD_TUTORIAL)
    ADD_SUBDIRECTORY(Tutorial)
  ENDIF()

ENDIF()
